[project]
name = "pUnit"
version = "0.0.0"
description = "A modernized unit-test framework for Python."
keywords = ["test", "unittest", "unit-test", "xUnit", "nUnit", "pytest"]
authors = [
    { name="Shaun Wilson", email="mrshaunwilson@msn.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers"
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "mypy"
]

[project.urls]
Documentation = "https://punit.readthedocs.io/"
Homepage = "https://github.com/wilson0x4d/punit"
Repository = "https://github.com/wilson0x4d/punit.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "docs",
    "tests",
    "tests.*"
]

[tool.setuptools.data-files]
bin = [".scripts/punit"]
