[project]
name = "pUnit"
version = "0.0.0"
description = "A modernized unit-test framework for Python."
keywords = ["test", "unittest", "unit-test", "xUnit", "nUnit", "pytest"]
authors = [
    { name="Shaun Wilson", email="mrshaunwilson@msn.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers"
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "twine"
]

[project.urls]
Documentation = "https://punit.readthedocs.io/"
Homepage = "https://github.com/wilson0x4d/punit"
Repository = "https://github.com/wilson0x4d/punit.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "docs",
    "tests",
    "tests.*"
]

[project.scripts]
punit = "punit.__main__:main"

[tool.setuptools.package-data]
"punit" = ["py.typed", "SKILL.md"]
